[b]Version 0.8.2[/b]:

(2012-09-28)
 * (Linux) Install larger icons. smplayer.svg contributed by akovia
   (http://smplayer.sourceforge.net/forum/viewtopic.php?f=7&t=5557)

(2012-09-21)
 * Add the option "Report MPlayer crashes" in Preferences -> Advanced.
 * New option for smplayer.ini: time_to_kill_mplayer. Specifies the
   time (in milliseconds) that smplayer should wait before killing
   the mplayer process if the process doesn't teminate on its own
   when the stop button is pressed. Default value: 5000.


[b]Version 0.8.1[/b]:

(2012-09-14)
 * Fix youtube playback.

(2012-08-26)
 * Fix: mplayer2 was not recognized if the name was in lowercase in the
   identification string.

(2012-08-24)
 * Show the background picture on stop.

(2012-08-14)
 * Youtube: don't use a user agent by default. It's possible to set
   the user agent in smplayer.ini though.

(2012-07-30)
 * Add mka and m4a to the list of extensions (for audio).

(2012-07-04)
 * New option "save_dirs" in the [directories] section. If set to false
   the latest used directory won't be saved.

(2012-07-23)
 * Add wtv to the list of extensions

(2012-06-25)
 * Add oga and ogx to the list of extensions
 
(2012-05-29)
 * Enable Audio CD on Windows (requires a libcdio enabled MPlayer)

[b]Version 0.8.0[/b]:

(2012-04-01)
 * Find subtitles window: display first the most used languages in the
   filter combobox. And add "pb" for Portuguese from Brasil.

(2012-03-31)
 * Fix the line breaks on downloaded *.sub files from opensubtitles.

(2012-03-29)
 * (Youtube) Recognize short urls.

(2012-03-28)
 * Display chapter names in the chapter menu.

(2012-03-19)
 * It's possible to change GUI without restarting.
 * Bug fix: remote m3u didn't open from the favorites menu or command line.

(2012-03-17)
 * Move the blur and sharpen filters to a group, so only one can be activated.
   It doesn't make much sense to be able to enable the blur and sharpen
   at the same time.